# CAMISIM

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README_docker.md  ani_prediction_to_meta_table.py  anonymization.nf  anonymizer.py  art.config  asd.py  binning.nf  build_ncbi_taxonomy.py  calculate_multiplication_factor.py  cluster.py  cluster.sh  cluster_prediction_to_meta_table.py  conda.config  config.cfg  convert_config.py  default_config.ini  distribution.config  distribution.nf  documentation.txt  ete2.patch  fastaanonymizer.py  fastastreamer.py  from_profile.nf  gather_16s.py  gather_16s.sh  genomeannotation.py  genomeannotationpipeline.py  get_community_distribution.py  get_genomes.py  get_seed.py  gold_standard_assembly.nf  main.nf  metagenome_from_profile.py  metagenomesimulation.py  metagenomesimulationpipeline.py  nanosim.config  (+9 more)
CAMI1_documentation/: files_folder_description.txt  plasmid_metadata_v2.3_filtered.tsv  plasmid_path.tsv  profile_to_metagenome.md
CAMI1_documentation/CAMI_2015/: JGI.txt  low.txt  mediumA.txt
GenomeAnnotationPipeline/: LICENSE.txt  README.md  config.cfg  genomeannotationpipeline.py  readme.txt
GenomeAnnotationPipeline/ppsplus/: run.py
GenomeAnnotationPipeline/scripts/: projectfilefolderhandle.py
archive/: design_community.py  fastaanonymizer.py  metagenome_from_profile.py  requirements.txt
defaults/: assembly_summary_chromosome.txt  assembly_summary_complete_genomes.txt  assembly_summary_complete_update.txt  default_config.ini  default_config_old.ini  genome_to_id.tsv  metadata.tsv  mini.biom  mini_config.ini  nanosim3_config.ini  nanosim_config.ini  pbsim_config.ini
defaults/genomes/: GCA_000006785.2_ASM678v2.fa  GCA_000013285.1_ASM1328v1.fa  GCA_000015865.1_ASM1586v1.fa  GCA_000023785.1_ASM2378v1.fa  GCA_000025905.1_ASM2590v1.fa  GCA_000092125.1_ASM9212v1.fa  GCA_000092825.1_ASM9282v1.fa  GCA_000143845.1_ASM14384v1.fa  GCA_000235405.3_ASM23540v3.fa  GCA_000242255.3_ASM24225v3.fa  GCA_000445015.1_ASM44501v1.fa  GCA_001692755.1_ASM169275v1.fa
docker/: Dockerfile  run.sh
docker/snake/: Snakefile
docker/tasks/: default  snake
docs/: output.md  usage.md
documentation/: CAMI2015_metadata_final.tsv  CAMI2015_paths.tsv  config_genome_annotation.cfg  default_config.ini  default_config.ini~  plasmid_path.tsv  template_config.cfg
documentation/CAMI_2015/: JGI.txt  high.txt  low.txt  mediumA.txt  mediumB.txt
nextflow_defaults/: GCA_000092825.1_ASM9282v1.fa  distribution_1.txt  genome_locations.tsv
nextflow_defaults/metagenomic/: distribution_0.txt  meta_data.tsv
nextflow_defaults/metatranscriptomic/: gene_annotation_locations.tsv  gene_annotation_locations_big.tsv  genome_locations.tsv  (+2 more)
read_simulators/: read_simulator_art.nf  read_simulator_nansoim3.nf  read_simulator_wgsim.nf  sam_from_reads.py
rnahmm/: run.py
scripts/: anim.py  anonymizer.py  argumenthandler.py  argumenthandler_ga.py  bamToGold.pl  communitydesign.py  configfilehandler.py  configparserwrapper.py  create_joint_gs.py  create_metadata.py  defaultvalues.py  fastaanonymizer.py  fastastreamer.py  genomepreparation.py  get_genomes.py  goldstandardfileformat.py  loggingwrapper.py  parallel.py  projectfilefolderhandle.py  projectfilefolderhandle_ga.py  readsimulationwrapper.py  split_fasta.pl
snake/: Snakefile
source/: ANIm.py  ArgumentHandler.py  Logger.py  MetaTable.py  MothurCluster.py  MothurOTU.py  Novelty.py  TaxonomicCluster.py  TaxonomyNcbi.py  anim.py  argumenthandler.py  concat_fasta_on_fasta.py  config.py  logger.py  metatable.py  mothurcluster.py  novelty.py  parallel.py  taxonomiccluster.py
tools/: Fasta2Phylip.pl  clustalo  concat_fasta_on_fasta.py  config.cfg  dist_from_tree.R  hmmer2_hmmsearch  run_rnammer.sh
tools/16SDetector/hmmer-3.0/easel/: 00README  BUGTRAX  COPYRIGHT  INSTALL  LICENSE  Makefile  Makefile.in  aclocal.m4  configure  configure.ac  easel.c  easel.h  easel.tex  easel_utest  esl_alphabet.c  esl_alphabet.h  esl_alphabet.tex  esl_alphabet_utest  esl_cluster.c  esl_cluster.h  esl_cluster.tex  esl_cluster_utest  esl_config.h  esl_config.h.in  esl_dirichlet.c  esl_dirichlet.h  esl_dirichlet.tex  esl_dirichlet_utest  esl_distance.c  esl_distance.h  esl_distance.tex  esl_distance_utest  esl_dmatrix.c  esl_dmatrix.h  esl_dmatrix.tex  esl_dmatrix_utest  esl_exponential.c  esl_exponential.h  esl_exponential.tex  esl_exponential_utest  (+148 more)
tools/16SDetector/hmmer-3.0/easel/devkit/: autodoc  c2optlist  cexcerpt  cexcerpt.man  esl-dependencies  man2optlist  rmanprocess.pl  sedition  sedition-pp  sqc
tools/16SDetector/hmmer-3.0/easel/esl_msa_testfiles/selex/: 00MANIFEST  selex.bad.1  selex.bad.10  selex.bad.11  selex.bad.12  selex.bad.13  selex.bad.14  selex.bad.2  selex.bad.3  selex.bad.4  selex.bad.5  selex.bad.6  selex.bad.7  selex.bad.8  selex.bad.9  selex.good.1  selex.good.2  selex.good.3
tools/16SDetector/hmmer-3.0/easel/formats/: embl  fasta  fasta.2  fasta.bad.1  fasta.bad.2  fasta.bad.3  fasta.odd.1  genbank  genbank.2  genbank.bad.1  uniprot
tools/16SDetector/hmmer-3.0/easel/miniapps/: Makefile  Makefile.in  esl-afetch  esl-afetch.c  esl-afetch.man  esl-alimanip  esl-alimanip.c  esl-alimanip.itest.pl  esl-alimanip.man  esl-alimap  esl-alimap.c  esl-alimap.itest.pl  esl-alimap.man  esl-alimask  esl-alimask.c  esl-alimask.itest.pl  esl-alimask.man  esl-alimerge  esl-alimerge.c  esl-alimerge.itest.pl  esl-alimerge.man  esl-alistat  esl-alistat.c  esl-alistat.itest.pl  esl-alistat.man  esl-cluster  esl-cluster.c  esl-compalign  esl-compalign.c  esl-compalign.itest.pl  esl-compalign.man  esl-compstruct  esl-compstruct.c  esl-compstruct.man  esl-construct  esl-construct.c  esl-construct.itest.pl  esl-construct.man  esl-histplot  esl-histplot.c  (+26 more)
tools/16SDetector/hmmer-3.0/easel/testsuite/: Makefile  Makefile.in  coverage_report.pl  dmatrix-t1.c  dmatrix-t2.c  driver_report.pl  e2.sh  esltmpaa16979.TESTPFX.3  esltmpaa16979.TESTPFX.list  esltmpaa16979.TESTPFX.o.stk  esltmpaa16979.TESTPFX.out2  esltmpaa16979.TESTPFX.stk  esltmps3rv6q  i1-degen-residues.pl  i2-ncbi-indices.pl  parse-t1.c  testsuite.sqc  valgrind_report.pl
(+692 files in other folders)
